# aste

./: .gitignore  .pep8  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  SConstruct  aste.cpp  asteconfig.yml  clean  colored.vtk  common.cpp  common.hpp  demo.sh  eval_mesh.py  fluidconfig.yml  join_mesh.py  main.cpp  make_mesh.py  mesh_io.py  partition_mesh.py  precice-A-events.json  precice-B-events.json  precice.xml  preciceDist.cpp  preciceMap.cpp  precice_cpl.xml  precice_cpl_S.xml  readMesh.cpp  requirements.txt  result.vtk  run.sh  run_imvj.sh  run_iqn.sh  visualize_partition.py
.github/: dependency_bot.yml  pull_request_template.md
.github/workflows/: aste_ci.yml  aste_ci_mac.yml  code_style.yml  draft-pdf.yml  indent.yml  link_check.yml  lint_markdown.yml  pep8.yml  update_website.yml
Preallocation_Timings/: make_csv.py  plot.tex  precice.xml.template  timings.py
RBF_Timings/: evaluate.py  hazelhen.job  plot.py  precice.xml.template  supermuc.cmd  supermuc.job  timings.py
changelog-entries/: 194.md  195.md  196.md  205.md  209.md  210.md  215.md
cmake/: FindMETIS.cmake
colored.dt0/: 0  1
contrib/: bunny.vtk  colored.vtk  demo.sh  job.supermuc  precice-A-events.json  precice-B-events.json  precice.xml  result.vtk  vector_demo.sh
contrib/Replay_Mode_Implicit_Case/: precice-config.xml
contrib/colored.dt0/: 0  1
contrib/mapped/: 0  1
contrib/mapping-tester/: array.sbatch  config-template.xml  gatherstats.py  generate.py  local_rbf.py  plot.py  plotconv.py  plotstats.py  precice.xml  preparemeshes.py  ready.sh  setup-turbine-2.json  setup-turbine-big.json  setup-turbine-small-tps.json  setup-turbine-small.json  setup.json  test.sbatch
contrib/nng-mapping-tester/: config-template.xml  error-turbine-coarse.txt  evaluate_function.sh  generate.py  plot.py  plot_big_edited.py  plot_small.py  plot_small_edited.py  preparemeshes.py  ready.sh  reset.sh  result-turbine.txt  run.sh  setup-cube-2.json  setup-cube.json  setup-turbine-2.json  setup-turbine-big.json  setup-turbine-coarse-cos.json  setup-turbine-coarse-eggholder.json  setup-turbine-coarse-rbf3.json  setup-turbine-coarse.json  setup-turbine-fine-eggholder.json  setup-turbine-fine-no-nn.json  setup-turbine-fine-rbf3-10.json  setup-turbine-fine-rosenbrock.json  setup-turbine-fine.json  setup-turbine.json  stats.sh  style.yml
contrib/nng-mapping-tester-testcases/: gatherstats.py  setup-turbine-coarse-cos.json  setup-turbine-coarse-franke.json  setup-turbine-coarse-rbf.json  setup-turbine-coarse-rbf3-10.json  setup-turbine-coarse-rosenbrock.json  setup-turbine-fine-cos.json  setup-turbine-fine-eggholder.json  setup-turbine-fine-franke.json  setup-turbine-fine-rbf10.json  setup-turbine-fine-rbf3.json  setup-turbine-small.json
contrib/rbc.dt0/: 0  0.conn  1  1.conn
contrib/reinit-demo/: 0.004.vtk  0.009.vtk  demo.sh  precice.xml
contrib/timestep-demo/: clean.sh  colored.dt0.vtk  colored.dt1.vtk  colored.dt10.vtk  colored.dt11.vtk  colored.dt12.vtk  colored.dt13.vtk  colored.dt14.vtk  colored.dt15.vtk  colored.dt16.vtk  colored.dt17.vtk  colored.dt18.vtk  colored.dt19.vtk  colored.dt2.vtk  colored.dt3.vtk  colored.dt4.vtk  colored.dt5.vtk  colored.dt6.vtk  colored.dt7.vtk  colored.dt8.vtk  colored.dt9.vtk  demo.py  precice-B-events.json  precice.xml  timesteps-precice.xml  timesteps.py
contrib/tools/: mesh.cpp  scale.cpp
contrib/turbine/: .demo.sh.swp  demo.sh  precice.xml  turbineFine.vtk
docs/: CONTRIBUTING.md  README.md  paper.bib  paper.md
examples/: .gitignore  clean-all.sh  run-all.sh
examples/lci_2d/: clean.sh  coarse_mesh.vtk  fine_mesh.vtk  precice-config.xml  run.sh
examples/lci_3d/: coarse_mesh.vtk  precice-config.xml  run.sh
examples/mapping_tester/: .gitignore  clean.sh  coarse_mesh.vtk  reference-statistics.csv  run.sh  setup-test.json
examples/mapping_tester_runtime/: fine_mesh.vtk  run.sh  setup-test.json
examples/nn/: precice-config.xml
examples/nn_indirect_access/: precice-config.xml  run.sh
examples/nng_scalar/: clean.sh  precice-config.xml  run.sh
examples/nng_vector/: clean.sh  precice-config.xml
examples/replay_mode/: aste-config-fluid.json  aste-config-solid.json  clean.sh  precice-config.xml  run.sh
examples/weak_scaling_tester/: run.sh  setup-test.json
mapped/: 0  1
plotting/: plot_preallocation.py  plot_time_over_ranks.py
rbc.dt0/: 0  1
src/: 0.009.vtk  asteJoin.py  astePartition.py  common.cpp  common.hpp  compare_mesh.py  configreader.cpp  configreader.hpp  easylogging++.cc  easylogging++.h  eval_mesh.py  join_mesh.py  logger.cpp  logger.hpp  make_mesh.py  mesh.cpp  mesh.hpp  mesh.py  mesh_io.py  mesh_io_tests.py  metisAPI.cpp  modes.cpp  modes.hpp  partition_mesh.py  precice-aste-evaluate  precice-aste-evaluate.py  precice-aste-join  precice-aste-join.cpp  precice-aste-join.hpp  precice-aste-join.py  precice-aste-partition  precice-aste-partition.py  precice-aste-run.cpp  preciceMap.cpp  precice_to_aste.py  utilities.cpp  utilities.hpp  visualize_partition.py  vtk_calculator.py  xml_parser.cpp  (+1 more)
src/tests/: edges.conn.txt  read_test.cpp  reference_scalars.vtk  reference_vector3d.vtk  scalarmd5  simple.txt  testing.cpp  testing.hpp  triangles.conn.txt  triangles.txt  vector2dmd5  vector3dmd5  write_test.cpp
tests/: read_test.cpp  reference_scalars.vtk  reference_vector2d.vtk  reference_vector3d.vtk  testing.cpp  testing.hpp  write_test.cpp
tests/example/: clean.sh  fine_mesh.vtk  precice-config.xml  run-all.sh  run.sh  run_nn_gradient.sh
tests/mapping-tester-example/: coarse_mesh.vtk  run.sh  setup-test.json
tools/: aste-tooling.py  asteEvaluate.py  asteJoin.py  astePartition.py
tools/formatting/: README.md  check-format  format-all
tools/mapping-scaling-tester/: common.py  config-template.xml  create_plots.py  gather_stats.py  generate_mapping_test.py  generate_scale_test.py  prepare_plots.py  prepare_scale_meshes.py  setup.json
tools/mapping-tester/: README.md  compare.py  config-template.xml  create_plots.py  gather_stats.py  gatherstats.py  generate.py  generate_mapping_test.py  local_rbf.py  plotconv.py  (+7 more)
(+398 files in other folders)
